clang/test/BSC/Negative/Trait/r1/definition_7/definition_7.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int a(This *this);
};

int int::a(int *this) {
  return 0;
};

impl trait F for int;

int main() {
  int a = 1;
  trait F f = &a; // expected-error {{only trait pointer type is allowed to be declared}}
  return 0;
}
